--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <app-sidenav></app-sidenav>
 
 <!--Main content area-->
-<div class="p-4 sm:ml-64">
-    
+<div class="p-0 sm:ml-64">
+
   <!--Margin div-->
-    <div class="m-16 mb-96">
-      <!--Router Outlet-->
-      <router-outlet></router-outlet>
+  <div class="mb-96">
+    <!--Router Outlet-->
+    <router-outlet></router-outlet>
 
-    </div>
+  </div>
 
-    <app-footer></app-footer>
+  <app-footer></app-footer>
 </div>
 
