--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<section class="flex flex-col  lg:justify-end font-poppins">
-    <div class="w-full bg-stone-800 pt-11 text-slate-100 rounded-lg">
+<section class="flex flex-col  lg:justify-end font-poppins p-4">
+    <div class="w-full bg-stone-800 pt-11 text-slate-100 rounded-3xl">
         <div class="justify-center flex-1 max-w-6xl px-4 py-4 mx-auto lg:py-0">
             <div class="flex items-center justify-center pb-3 border-b border-gray-300 lg:justify-between">
                 <div class="hidden mr-12 lg:block">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <div class="py-6 text-center bg-stone-900 text-white rounded-lg">
+        <div class="py-6 text-center bg-stone-900 text-white rounded-3xl">
             <span>© Copyright 2022 . All Rights Reserved</span>
         </div>
     </div>
